[gd_scene load_steps=7 format=2]

[ext_resource path="res://Entities/Hemwick/Sword.png" type="Texture" id=1]
[ext_resource path="res://Shaders/dropshadow.gdshader" type="Shader" id=2]
[ext_resource path="res://Misc/WeaponChangers/WeaponChangerSword.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/offset = Vector2( -3.421, 0.789 )
shader_param/modulate = Color( 0.0588235, 0.0588235, 0.0588235, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[node name="WeaponChanger_Sword" type="StaticBody2D"]
collision_layer = 1024
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Sword" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 8, 16 )
rotation = 3.44773
scale = Vector2( 0.18, 0.14 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
position = Vector2( 12, 6 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="PickUpArea" to="." method="_on_PickUpArea_area_entered"]
